--- a/src/main/resources/templates/hello-template.html
+++ b/src/main/resources/templates/hello-template.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>mvc</title>
 </head>
 <body>
-<p th:text="'Hello ' + ${name}" > 안녕??? 친구</p>
+<p th:text="'Hello ' + ${name}"> 안녕??? 친구</p>
 </body>
 </html>
